--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">BasicBluetooth</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string-array name="barcode_types">
+        <item>UPC-A</item>
+        <item>UPC-E</item>
+        <item>JAN13</item>
+        <item>JAN8</item>
+        <item>CODE39</item>
+        <item>ITF</item>
+        <item>CODABAR</item>
+        <item>CODE93</item>
+    </string-array>
 </resources>
